[gd_scene load_steps=4 format=3 uid="uid://dcueauhnrx0s1"]

[ext_resource type="Script" path="res://menus/settings_menu.gd" id="1_yb7y5"]
[ext_resource type="Texture2D" uid="uid://d8silogoswjf" path="res://menus/limbool placeholder image.png" id="2_26s7s"]
[ext_resource type="Theme" uid="uid://cy86qqmkytmy5" path="res://UI/liminal pink button themeee.tres" id="3_jf60b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yb7y5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_26s7s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -38.5
offset_right = 155.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Audio" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_jf60b")
text = "Audio"

[node name="Sensitivity" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_jf60b")
text = "Sensitivity"

[node name="Apply" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_jf60b")
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sensitivity" to="." method="_on_sensitivity_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Apply" to="." method="_on_back_pressed"]
